Allow remove queries when remove datasource. Code refactor to remove Business logic from controllers.
